# Online-Adaboost-for-creating-target-specific-color-classifiers-

./: CMakeLists.txt  README.md  README.txt
include/adaboost/: ColorFeature.hpp  StrongClassifier.hpp  WeakClassifier.hpp
src/: demo_adaboost.cpp
